css/style.css
/* ... */
#me_pic {
    border-radius: 50%;
    width: 250px;
}

@-webkit-keyframes alt_color {
    0% {
        color: #4285F5;
    }
    25% {
        color: #EA4435;
    }
    50% {
        color: #F9BB08;
    }
    75% {
        color: #32A452;
    }
    100% {
        color: #4285F5;
    }
}

@keyframes alt_color {
    0% {
        color: #4285F5;
    }
    25% {
        color: #EA4435;
    }
    50% {
        color: #F9BB08;
    }
    75% {
        color: #32A452;
    }
    100% {
        color: #4285F5;
    }
}

#aj_h1 {
    color: #4285F5;
    -webkit-animation: alt_color 30s infinite;
    animation: alt_color 30s infinite;
    -webkit-animation-delay: 3s;
    animation-delay: 3s;
}

#enth_debug,
#web_dev_h2 {
    color: #4285F5
}

#quick_learner,
#ux_h2 {
    color: #32A452;
}

#people_person,
#research_h2 {
    color: #EA4435
}

#
/* The typing effect */

@-webkit-keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

@-webkit-keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

@keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

@-webkit-keyframes typing_des {
    from {
        width: 0;
    }
    to {
        width: 50%;
    }
}

@keyframes typing_des {
    from {
        width: 0;
    }
    to {
        width: 50%;
    }
}


/* The typewriter cursor effect */

@-webkit-keyframes blink-caret {
    from,
    to {
        border-color: transparent
    }
    50% {
        border-color: #4285F5;
    }
}

@keyframes blink-caret {
    from,
    to {
        border-color: transparent
    }
    50% {
        border-color: #4285F5
    }
}

#title_me {
    display: -webkit-box;
    display: flex;
    padding-top: 50px;
}

.title {
    font-size: 25px;
}


/* Access! */

a.skip {
    background: white;
    left: 0;
    padding: 6px;
    position: absolute;
    top: -40px;
    -webkit-transition: top 1s ease-out;
    transition: top 1s ease-out;
    z-index: 1;
}

a.skip:focus {
    top: 20px;
    color: black;
    -webkit-text-decoration-style: solid;
    text-decoration-style: solid;
}

*:focus {
    border: 2px solid black;
}

.grid-container {
    display: grid;
    grid-template-columns: 1fr 2fr 1fr;
    row-gap: 0px;
}

#intro,
#projects,
#web_img,
#web_text,
#ux_text,
#ux_img,
#research_text,
#research_img,
#debug_text,
#debug_img,
#learn_text,
#learn_img,
#people_text,
#people_img,
#about,
#designs {
    grid-column: 2 / span 1;
}

nav {
    grid-row: 2 / span 1;
    grid-column: 2/ span 1;
    border-left: solid #F9BB08;
    margin: 0 auto;
}

nav li a {
    text-decoration: none;
    color: black;
}

.nav_active {
    color: #4285F5;
}

nav li {
    padding-bottom: 10px;
    margin-left: 30px;
}

nav li a:hover {
    color: #F9BB08
}

#projects {
    grid-row: 3 / span 1;
}

#web_text {
    grid-row: 4 / span 1;
}

#web_img {
    grid-row: 5 / span 1;
}

#ux_text {
    grid-row: 6 / span 1;
}

#ux_img {
    grid-row: 7 / span 1;
}

#research_text {
    grid-row: 8 / span 1;
}

#research_img {
    grid-row: 9 / span 1;
}

#about {
    grid-row: 10 / span 1;
}

#debug_text {
    grid-row: 11 / span 1;
}

#debug_img {
    grid-row: 12 / span 1;
}

#learn_text {
    grid-row: 13 / span 1;
}

#learn_img {
    grid-row: 14 / span 1;
}

#people_text {
    grid-row: 15 / span 1;
}

#people_img {
    grid-row: 16 / span 1;
}

#designs {
    grid-row: 17 / span 1;
}

#design_text {
    grid-row: 18 / span 1;
}

#mygal {
    grid-row: 19 / span 1;
}

#web_img,
#ux_img,
#research_img,
#debug_img,
#learn_img,
#people_img {
    grid-column: 2 / span 1;
    row-gap: 0px;
    margin-left: auto;
    margin-right: auto;
}

#projects,
#designs,
#about {
    grid-column: 1 / span 3;
    padding: 20px 25px;
    border-bottom: #4285F5 solid;
    padding-top: 200px;
}

#projects,
#designs,
#about {
    margin-top: 215px;
    padding-top: 364px;
}

#web_text {
    padding-top: 20px;
}

#intro,
#projects,
#about,
#designs,
#web_text,
#ux_text,
#research_text,
#debug_text,
#learn_text,
#people_text,
#design_text {
    text-align: center;
}

#web_text p,
#ux_text p,
#research_text p,
#debug_text p,
#learn_text p,
#people_text p {
    text-align: center;
}

#spotistats {
    text-align: center !important;
}

#intro {
    padding-top: 100px;
    padding-bottom: 100px;
    grid-row: 1 / span 1;
}

.skills {
    padding-top: 50px;
}

.gallery {
    min-height: 600px;
    display: -webkit-box;
    display: flex;
    -webkit-box-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    flex-direction: row;
    flex-wrap: wrap;
}

.design_image {
    width: 100%;
}

.design_img {
    width: 80%;
    margin-top: 82px;
}

#image3,
#image4,
#image6 {
    background-color: rgba(153, 153, 153, 0.568);
}

.zoomGalOut {
    width: 600px;
    height: 338px;
    overflow: hidden;
    position: relative;
}

.zoomGalIn {
    width: 100%;
    height: 100%;
    background-image: url("music.jpg");
    background-position: center;
    background-size: cover;
    transition-duration: 1s;
    transition-timing-function: ease;
}

.zoomGalIn:hover {
    transform: scale(1.2);
}

#mygal {
    grid-column: 1/ span 4;
}

#mygal {
    padding-top: 50px;
}

#web_text,
#ux_text,
#research_text,
#debug_text,
#learn_text,
#people_text,
#design_text {
    grid-column: 2 / span 1;
    padding-top: 65px;
}
/* ... */

